filter z-index fixes

--- a/stylesheets/sass/56.scss
+++ b/stylesheets/sass/56.scss
@@ -416,7 +416,7 @@ canvas {
 }
 
 .art-filter-toggle {
-    z-index: 666;
+    z-index: 150;
     position: fixed;
     top: 120px;
     left: 31px;
@@ -427,7 +427,7 @@ canvas {
 }
 
 .art-filter-box {
-    z-index: 666;
+    z-index: 150;
     position: fixed;
     top: 120px;
     left: 31px;
